# RendRipper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  documentation.txt
3DModelGenerator/TripoSR/: requirements.txt  run.py
Slicer/: model_settings.json
resources/model_settings/: model_settings.json
resources/models/: imgui.ini  print_plate.mtl
resources/printer_settings/: a1mini_custom_profile.json  bambulab_a1mini.def.json
resources/scripts/: compile.bat
resources/shaders/: deferred_geom.frag  deferred_geom.vert  deferred_light.frag  deferred_light.vert  gcode_shader.frag  gcode_shader.geom  gcode_shader.vert  infinite_grid.frag  infinite_grid.vert  model_shader.frag  model_shader.vert  pick.frag  pick.vert  plate_shader.frag  plate_shader.vert  shader.frag  shader.vert  simple_colored_line.vert
src/: Application.cpp  Application.h  AxesRenderer.cpp  GCodeModel.cpp  GCodeModel.h  GCodeParser.cpp  GCodeParser.h  GCodeUploader.cpp  GCodeUploader.h  GizmoController.cpp  GizmoController.h  GridRenderer.cpp  GridRenderer.h  IO_utility.cpp  IO_utility.h  Mesh.cpp  Mesh.h  MeshRepairer.h  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  ObjConverter.cpp  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Shader.h  ShaderModule.cpp  TextureLoader.cpp  TextureLoader.h  Transform.cpp  Transform.h  UIManager.cpp  UIManager.h  VolumeBoxRenderer.cpp  WindowManager.cpp  WindowManager.h  main.cpp
src/app/: Application.cpp  Application.h  main.cpp
src/controllers/: CameraController.h  GizmoController.cpp  GizmoController.h  WindowManager.cpp  WindowManager.h
src/gcode/: GCodeModel.cpp  GCodeModel.h  GCodeParser.cpp  GCodeParser.h  GCodeUploader.cpp  GCodeUploader.h
src/models/: Mesh.cpp  Mesh.h  MeshRepairer.cpp  MeshRepairer.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  ModelManager.cpp  ModelManager.h  Texture.cpp  Transform.cpp  Transform.h
src/rendering/: AxesRenderer.cpp  AxesRenderer.h  FrameBuffer.cpp  FrameBuffer.h  GridRenderer.cpp  GridRenderer.h  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Shader.h  ShaderCache.cpp  ShaderCache.h  ShaderModule.cpp  ShaderModule.h  TextureCache.cpp  TextureCache.h  TextureLoader.cpp  TextureLoader.h  VolumeBoxRenderer.cpp  VolumeBoxRenderer.h
src/ui/: UIManager.cpp  UIManager.h  UIManagerHelpers.cpp
src/utils/: IO_utility.cpp  IO_utility.h  ObjConverter.cpp  ObjConverter.h  Pipe.h
tests/: CMakeLists.txt  test_main.cpp
